# swarmPoseEstimation

./: .gitignore  LICENSE  README.md  port_forwarding.ps1
host/: README.md
host/src/ros_examples/: CMakeLists.txt  average_calculator.launch  average_publisher.cpp  average_subscriber.cpp  helloRos.cpp  package.xml
host/src/swarm_centroid_estimator/: CMakeLists.txt  centroid_calculator.cpp  centroid_calculator.launch  package.xml
host/src/swarm_pose_estimator/: CMakeLists.txt  centroid_estimator.cpp  centroid_estimator.launch  package.xml
khepera/camera-calibration/: CMakeLists.txt  README.md  cameraCalibration.cpp  config.xml  imageList.xml  takeCalibrationImages.bash
khepera/centroid-estimator/: CMakeLists.txt  centroidEstimator.cpp
khepera/include/swarm_pose_estimation/: kheperaPoseEstimation.cpp  kheperaPoseEstimation.h
khepera/khepera-examples/: CMakeLists.txt  tag_dodger.cpp
khepera/markers/: tagLocations.yaml
khepera/pose-publisher/: CMakeLists.txt  posePublisher.cpp  rosHello.cpp
