<?xml version="1.0"?>
<package format="2">
  <name>ros_examples</name>
  <version>0.0.0</version>
  <description>TODO</description>

  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
</package>
