<?xml version="1.0"?>
<package format="2">
  <name>swarm_centroid_estimator</name>
  <version>0.0.0</version>
  <description>The swarm_centroid_estimator package is designed to use information from multiple Khepera robots in estimating the swarm's center of mass.</description>

  <maintainer email="chukwuemeka.o.ike@gmail.com">Chukwuemeka "Mekahertz" Ike</maintainer>
  <license>MIT</license>
  <url type="repository">https://https://github.com/Chukwuemeka-Ike/swarmPoseEstimation</url>
  <author email="chukwuemeka.o.ike@gmail.com">Chukwuemeka "Mekahertz" Ike</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>

</package>
